<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:orientation="horizontal"
    android:weightSum="2"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:weightSum="3"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtDateTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:textSize="12pt"
            android:text="@string/date_time"
            tools:ignore="NestedWeights" />

        <TextView
            android:id="@+id/txtWeather"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/weather" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:weightSum="3"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgWeather"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            tools:srcCompat="@tools:sample/avatars"
            tools:ignore="NestedWeights" />

        <TextView
            android:id="@+id/txtMinTemperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:text="@string/temperature_loading" />

        <TextView
            android:id="@+id/txtMaxTemperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_weight="1"
            android:text="@string/temperature_loading" />
    </LinearLayout>

</LinearLayout>